--- a/nextflow.config
+++ b/nextflow.config
@@ -5,3 +5,22 @@ manifest {
 process {
   container = 'nextflow/examples'
 }
+
+profiles {
+
+ s3test {
+ 
+  aws {
+  region = 'uk-london-1'
+    client {
+      uploadChunkSize = 10485760
+      s3PathStyleAccess = true
+      protocol = 'HTTPS'
+      connectionTimeout = '2000'
+      endpoint  = 'https://lroue8qm7xvd.compat.objectstorage.uk-london-1.oraclecloud.com/'
+     }
+    }
+    
+  }
+  
+}
